GNOME Bugzilla – Bug 76876
keybindings capplet dies on startup
Last modified: 2004-12-22 21:47:04 UTC
Package: control-center Severity: normal Version: 1.99.6 Synopsis: keybindings capplet dies on startup Bugzilla-Product: control-center Bugzilla-Component: keyboard BugBuddy-GnomeVersion: 2.0 (1.113.0) Description: btw, we need a keybindings capplet component. Debugging Information: Backtrace was generated from '/home/hp/unst/bin/gnome-keybinding-properties' [New Thread 1024 (LWP 12951)] 0x409deca9 in __wait4 () from /lib/i686/libc.so.6
+ Trace 20022
Thread 1 (Thread 1024 (LWP 12951))
------- Bug moved to this database by unknown@bugzilla.gnome.org 2002-03-29 02:21 ------- Reassigning to the default owner of the component, tvgm@ximian.com.
Value not set: (gdb) frame
+ Trace 20023
$5 = (GConfValue *) 0x0
This was a 2 fold problem 1) the schema was missing in libgnome - jrb just committed it 2) The code was not checking for NULL (caused by a missing schema) - patched in CVS.
*** Bug 77175 has been marked as a duplicate of this bug. ***