http://bugzilla.gnome.org/show_bug.cgi?id=76876 2002-03-29  Jody Goldberg <jody@gnome.org>

* gnome-keybinding-properties.c (create_dialog) : remove the startup
	  warning caused by looking in the current directory for the glade file.
	(key_theme_changed) : add some protection for missing schemas.